Intro finished with notes, results and future work now

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -1,5 +1,8 @@
 \documentclass{beamer}
+
+% Beamer style stuff
 \usetheme[style=plain]{uu}
+% \setbeamertemplate{note page}[plain]
 
 \usepackage{graphicx}
 \usepackage{mathtools}
@@ -27,7 +30,6 @@
 \newmint{coq}{mathescape,fontfamily=tt,fontsize=\footnotesize}
 \newmintedfile{coq}{xleftmargin=20pt,mathescape,fontfamily=tt,fontsize=\footnotesize}
 \newminted{coq}{xleftmargin=20pt,gobble=12,mathescape,fontfamily=tt,fontsize=\footnotesize}
-
 
 
 %% Metainformation
