Future work described

--- a/presentation/section5-conclusions.tex
+++ b/presentation/section5-conclusions.tex
@@ -78,6 +78,29 @@
 
     \begin{frame}
         \frametitle{Future work}
+
+        \begin{itemize}
+            \item Modelling larger circuits
+            \vspace{0.2cm}
+            \item Investigate and try to apply recent GHC developments
+                \begin{itemize}
+                    \item Data and type families
+                    \item Type-level natural literals and operations
+                    \item Datatype promotion and kind polymorphism
+                \end{itemize}
+            \vspace{0.2cm}
+            \item Hardware description in \emph{dependently-typed} languages
+                \begin{itemize}
+                    \item Coq verifiable \emph{synthesis} of circuits
+                    \item Hardware EDSL in the Agda language
+                \end{itemize}
+        \end{itemize}
+
+        \note{
+            \begin{itemize}
+                \item Already work by Thomas Braibant (Coquet) on synthesizable Coq hardware
+            \end{itemize}
+        }
     \end{frame}
 
 
