2nd-last review. Now just rehearse :)

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -49,9 +49,10 @@
 
 \date{February 13th, 2014}
 
-\author[Pizani Flor]
+\author[J. P. Pizani Flor]
 {
-    João Paulo Pizani Flor
+    João Paulo Pizani Flor \\
+    {\small Supervised by: dr. Wouter Swierstra}
 }
 
 \institute[Utrecht University]
