--- a/presentation/section2-analyzed-edsls.tex
+++ b/presentation/section2-analyzed-edsls.tex
@@ -9,7 +9,7 @@
         \vspace{0.3cm}
         \begin{itemize}
             \item Hosted on already-known languages
-            \item Covered a wide range in the criteria we defined (variety)
+            \item Covered a wide range over the criteria we defined (variety)
             \item Originals instead of variants or improvements
             \item Relatively well-known, frequently cited
         \end{itemize}
@@ -20,7 +20,7 @@
     \label{subsec:chosen-edsls}
         \begin{frame}
             \frametitle{Chosen EDSLs}
-            \par{The language we chose to evaluate, with the respective host language, were:}
+            \par{The languages chosen, with the respective host language, were:}
             \vspace{0.3cm}
             \begin{itemize}
                 \item Lava (Haskell - \texttt{chalmers-lava} variant)
@@ -44,12 +44,11 @@
                 \item Extensibility
             \end{itemize}
             \vspace{0.2cm}
-            \par{Even though \emph{depth of embedding} can influence other criteria\ldots}
 
             \note{
                 \begin{itemize}
                     \item Orthogonal means independent
-
+                    \item Relevant to hardware designers
                     \item Functional simulation (inputs/outputs)
                     \item Diff validation/verification:
                         \begin{itemize}
@@ -61,7 +60,7 @@
                             \item I/O sizes
                             \item Other: \emph{iterations} in a crypto circuit, etc.
                         \end{itemize}
-                    \item Depth of embedding: deep means datatype for circuits
+                    \item Depth of embedding: deep means datatype for circuits, other criteria
                     \item Integration with other hardware tools: synthesis, timing, model checkers
                 \end{itemize}
             }
