Final review, printing notes

--- a/presentation/section1-introduction.tex
+++ b/presentation/section1-introduction.tex
@@ -26,7 +26,9 @@
             \end{itemize}
 
             \note{
-                \item Sometimes even \emph{exhaustive} simulation
+                \begin{itemize}
+                    \item Sometimes even \emph{exhaustive} simulation
+                \end{itemize}
             }
         \end{frame}
 
