--- a/presentation/section3-modeled-circuits.tex
+++ b/presentation/section3-modeled-circuits.tex
@@ -65,7 +65,7 @@
 
             \begin{itemize}
                 \item 2 \emph{operand inputs} and 1 \emph{operand output}, each 16-bit wide
-                \item 1 \emph{output flag}
+                \item 2 \emph{output flags}
                 \item Can execute 18 different \emph{functions}, among which:
                     \begin{itemize}
                         \item Addition, subtraction
